# drone6_ros

./: README.md  start.bash  view.bash
drone6_bridge/: CMakeLists.txt  package.xml  start.bash
drone6_bridge/include/drone6_bridge/: message_helpers.h
drone6_bridge/src/: bridge.cpp
fcbridge/: CMakeLists.txt  package.xml
fcbridge/include/drone6_bridge/: fc_uart.h
src/cv/: CMakeLists.txt  package.xml
src/cv/include/cv/: onnx_helper.h
src/cv/src/: human_detector.cpp
src/cv/test/: test_onnx.cpp  test_opencv.cpp
